changed the cards height on mobile due to issues on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -704,7 +704,11 @@ ul li a:hover {
    text-align: center;
   
   }
+  /* cards */
 
+  .contact-card-mobile {
+    height: 40vh;
+  }
   
 
 
